--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,33 @@
-[tool.poetry]
+[project]
 name = "orchestration-framework"
 version = "0.1.0"
+requires-python = ">=3.9"
 description = "Multi-agent framework for Snowflake"
-authors = ["alejandro <alejandro.herrera@snowflake.com>"]
+authors = [
+  { name = "Alejandro Ferrera", email = "alejandro.herrera@snowflake.com" },
+]
 readme = "README.md"
-packages = [{include = "agent_gateway"}]
-include = ["README.md"]
 
-[tool.poetry.dependencies]
-python =">=3.9,<3.9.7 || >3.9.7,<3.12"
-snowflake-snowpark-python = "^1.22.1"
-dspy-ai = "2.5.3"
-langchain = "^0.3.2"
-asyncio = "^3.4.3"
-aiohttp = "^3.10.9"
-pydantic = "^2.9.2"
+dependencies = [
+    "snowflake-snowpark-python>=1.22.1",
+    "dspy-ai>=2.5.3",
+    "langchain>=0.3.2",
+    "asyncio>=3.4.3",
+    "aiohttp>=3.10.9",
+    "pydantic>=2.9.2"
+]
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.0.1"
-ruff = "^0.6.9"
-pytest = "^8.3.3"
-
-
-[tool.poetry.group.app.dependencies]
-streamlit = "^1.39.0"
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=4.0.1",
+    "ruff>=0.6.9",
+    "pytest>=8.3.3"
+]
+streamlit = ["streamlit >= 1.39.0"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["agent_gateway"]
