--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 ]
 readme = "README.md"
 dependencies = [
+    "langchain-core=>=0.3,<0.3.23",
     "snowflake-snowpark-python[pandas]>=1.22.1,<2.0",
-    "langchain>=0.3.2,<0.4",
     "asyncio>=3.4.3",
     "aiohttp>=3.10.9,<4.0",
     "pydantic>=2.9.2,<3.0"
