--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "orchestration-framework"
-version = "0.1.2"
+version = "0.1.3"
 requires-python = ">=3.9"
 description = "A multi-agent framework with native support for Snowflake services"
 authors = [
@@ -24,6 +24,10 @@ Repository = "https://github.com/Snowflake-Labs/orchestration-framework.git"
 Issues = "https://github.com/Snowflake-Labs/orchestration-framework/issues"
 
 [project.optional-dependencies]
+trulens = [
+   "trulens>=1.4.5",
+    "trulens-connectors-snowflake"
+]
 dev = [
     "pre-commit>=4.0.1,<5.0",
     "ruff>=0.6.9,<1.0",
