--- a/flask_api/requirements.txt
+++ b/flask_api/requirements.txt
@@ -4,3 +4,6 @@ flask-cors==4.0.0
 python-dotenv==1.0.1
 gunicorn==21.2.0
 requests==2.31.0
+quart==0.19.4
+hypercorn==0.15.0
+snowflake-snowpark-python==1.12.0
