--- a/flask_api/requirements.txt
+++ b/flask_api/requirements.txt
@@ -1,9 +1,9 @@
 flask==3.0.2
 flask-restful==0.3.10
 flask-cors==4.0.0
-python-dotenv==1.0.1
+python-dotenv>=1.0.0
 gunicorn==21.2.0
-requests==2.31.0
-quart==0.19.4
-hypercorn==0.15.0
-snowflake-snowpark-python==1.12.0
+requests>=2.31.0
+quart>=0.18.4
+hypercorn>=0.15.0
+snowflake-snowpark-python>=1.11.0
