--- a/flask_api/requirements.txt
+++ b/flask_api/requirements.txt
@@ -6,5 +6,7 @@ gunicorn==21.2.0
 requests>=2.31.0
 quart>=0.18.4
 hypercorn>=0.15.0
-snowflake-snowpark-python>=1.11.0
+snowflake-snowpark-python>=1.12.0
+snowflake-connector-python>=3.7.0
 pydantic>=2.0.0
+blinker>=1.6.2
