spcs works almost

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ structlog==24.1.0
 snowflake-snowpark-python>=1.31.1
 requests>=2.31.0
 fastmcp>=2.3.4
+cryptography<41.0.0,>=3.1.0
+PyJWT>=2.8.0
+typing-extensions>=4.8.0
